--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.port=8083
 
 # External service configuration
 user.service.url=http://localhost:8086/api/myAccount
-
+comment.service.url=http://localhost:8089/api/comments
 
 
 
