--- a/comment-service/src/main/resources/application-docker.properties
+++ b/comment-service/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 spring.application.name=comment-service
-server.port=8081
+server.port=8087
 
 
 spring.datasource.url=jdbc:postgresql://host.docker.internal:5433/postgres
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
