--- a/comment-service/src/main/resources/application.properties
+++ b/comment-service/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 user.service.url=http://localhost:8083/api/post
+
+eureka.client.serviceUrl.defaultzone=http://host.docker.internal:8761/eureka
