--- a/post-service/src/main/resources/application-docker.properties
+++ b/post-service/src/main/resources/application-docker.properties
@@ -12,3 +12,5 @@ spring.data.mongodb.database=post-service
 spring.data.mongodb.username=rootadmin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
