--- a/user-service/src/main/resources/application-docker.properties
+++ b/user-service/src/main/resources/application-docker.properties
@@ -11,6 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 #
 ##mongo configurations
 #spring.data.mongodb.host=mongodb
