--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.application.name=user-service
-server.port=8086
+server.port=8087
 
 #spring.datasource.url=jdbc:postgresql://host.docker.internal:5434/postgres
 spring.datasource.url=jdbc:postgresql://localhost:5434/postgres
@@ -14,10 +14,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+eureka.client.serviceUrl.defaultzone=http://host.docker.internal:8761/eureka
 
-#eureka.client.serviceUrl.defaultzone=http://localhost:8761/eureka
-#eureka.client.serviceUrl.defaultzone=http://discover-service:8761/eureka
-#eureka.client.serviceUrl.defaultzone=http://host.docker.internal:8761/eureka
+
 
 
 
