keycloak set up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,44 @@ services:
     networks:
       - spring
 
+  keycloak:
+    image: jboss/keycloak
+    restart: on-failure
+    ports:
+      - "8080:8080"
+    container_name: keycloak
+    depends_on:
+      - postgres-keycloak
+    environment:
+      JBOSS_LOG_MANAGER_ROOT_LOGGER: DEBUG
+      DB_VENDOR: postgres
+      DB_ADDR: postgres-keycloak
+      DB_DATABASE: keycloak
+      DB_USER: keycloak
+      DB_PASSWORD: password
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: password
+      KEYCLOAK_IMPORT: /opt/jboss/keycloak/realms/spring-social2-realm.json
+    volumes:
+      - ./realms/:/opt/jboss/keycloak/realms
+    networks:
+      - spring
+
+  postgres-keycloak:
+    image: postgres
+    restart: unless-stopped
+    ports:
+      - "5431:5432"
+    environment:
+      - POSTGRES_USER=keycloak
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=keycloak
+    volumes:
+      - ./data/postgres/postgres-keycloak:/data/postgres
+    container_name: postgres-keycloak
+    networks:
+      - spring
+
   user-service:
     image: user-service # from build in Dockerfile created in terminal; :1.0 is version specified
     ports:
