--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,12 +11,12 @@ logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INF
 # Comment Service
 spring.cloud.gateway.routes[0].id=comment-service
 spring.cloud.gateway.routes[0].uri=lb://comment-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/comments
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/comments/**
 
 # Post Service
 spring.cloud.gateway.routes[1].id=post-service
 spring.cloud.gateway.routes[1].uri=lb://post-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/post
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/post/**
 
 # Discovery Service
 spring.cloud.gateway.routes[2].id=discovery-service
@@ -32,10 +32,10 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 # User Service
 spring.cloud.gateway.routes[4].id=user-service
 spring.cloud.gateway.routes[4].uri=lb://user-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/myAccount
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/myAccount/**
 
 
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/auth/realms/spring-boot-microservices-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/auth/realms/spring-social2-realm
 
 #zipkin
 #is used to configure endpoint where the traces are sent to
