Friendship progress pt 2

--- a/friendship-service/src/main/resources/application.properties
+++ b/friendship-service/src/main/resources/application.properties
@@ -35,6 +35,6 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-},%X{spanId:-}]
 
-# User Service URL
-user.service.url=http://localhost:8082/api/user
+# External service configuration
+user.service.url=http://localhost:8086/api/myAccount
 
