--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -36,6 +36,11 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/api/myAccount/**
 
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/auth/realms/spring-social2-realm
+
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
 #
 #management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 #management.tracing.sampling.probability=1.0
