--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -37,6 +37,11 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/api/myAccount/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/auth/realms/spring-social2-realm
 
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
+
 #zipkin
 #is used to configure endpoint where the traces are sent to
 
