--- a/discovery-service/src/main/resources/application-docker.properties
+++ b/discovery-service/src/main/resources/application-docker.properties
@@ -11,8 +11,8 @@ spring.security.user.password=password
 
 
 logging.level.org.springframework.security=DEBUG
-#
-#management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
-#management.tracing.sampling.probability=1.0
-#
-#logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
+
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
