--- a/user-service/src/main/resources/application-docker.properties
+++ b/user-service/src/main/resources/application-docker.properties
@@ -13,6 +13,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+
+
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
 #
 ##mongo configurations
 #spring.data.mongodb.host=mongodb
