--- a/comment-service/src/main/resources/application.properties
+++ b/comment-service/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 post.service.url=http://localhost:8085/api/post
 
 eureka.client.serviceUrl.defaultzone=http://host.docker.internal:8761/eureka
+
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
