--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -15,7 +15,8 @@ spring.security.user.password=password
 
 logging.level.org.springframework.security=DEBUG
 
-#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
-#management.tracing.sampling.probability=1.0
-#
-#logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
+
