--- a/post-service/src/main/resources/application-docker.properties
+++ b/post-service/src/main/resources/application-docker.properties
@@ -15,3 +15,32 @@ spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+
+#resilience4j
+
+resilience4j.circuitbreaker.instances.user.registerHealthIndicator=true
+
+resilience4j.circuitbreaker.instances.user.event-consumer-buffer-size=10
+
+resilience4j.circuitbreaker.instances.user.slidingWindowType=COUNT_BASED
+
+resilience4j.circuitbreaker.instances.user.slidingWindowSize=5
+
+resilience4j.circuitbreaker.instances.user.failureRateThreshold=50
+
+resilience4j.circuitbreaker.instances.user.waitDurationInOpenState=5s
+
+resilience4j.circuitbreaker.instances.user.permittedNumberOfCallsInHalfOpenState=3
+
+resilience4j.circuitbreaker.instances.user.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+#timeLimiter properties
+
+resilience4j.timelimiter.instances.user.timeoutDuration=3s
+resilience4j.retry.instances.user.max-attempts=3
+resilience4j.retry.instances.user.waitDuration=5s
+
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
+logging.pattern.level=%5p [${spring.application.name:}, %X{traceId:-}, %X{SpanId:-}]
