Friendship progress pt 3

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 eureka.client.serviceUrl.defaultzone=http://host.docker.internal:8761/eureka
 
 
+friendship.service.url=http://localhost:8085/api/friendship
 
 
 
