--- a/friendship-service/src/main/resources/application-docker.properties
+++ b/friendship-service/src/main/resources/application-docker.properties
@@ -3,7 +3,7 @@ spring.application.name=friendship-service
 server.port=8085
 
 # PostgreSQL DataSource configuration
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5433/postgres
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
