--- a/user-service/src/main/resources/application-docker.properties
+++ b/user-service/src/main/resources/application-docker.properties
@@ -13,6 +13,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+
+
+friendship.service.url=http://localhost:8085/api/friendship
 #
 ##mongo configurations
 #spring.data.mongodb.host=mongodb
