--- a/comment-service/src/main/resources/application.properties
+++ b/comment-service/src/main/resources/application.properties
@@ -18,6 +18,19 @@ post.service.url=http://localhost:8085/api/post
 
 eureka.client.serviceUrl.defaultzone=http://host.docker.internal:8761/eureka
 
+management.endpoints.web.exposure.include=*
+management.health.circuitbreakers.enabled=true
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=2
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
