--- a/post-service/src/main/resources/application-docker.properties
+++ b/post-service/src/main/resources/application-docker.properties
@@ -16,6 +16,11 @@ spring.data.mongodb.authentication-database=admin
 
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 #resilience4j
 
 resilience4j.circuitbreaker.instances.user.registerHealthIndicator=true
