friendship service added

--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -34,6 +34,10 @@ spring.cloud.gateway.routes[4].id=user-service
 spring.cloud.gateway.routes[4].uri=lb://user-service
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/myAccount/**
 
+#Friendship service
+spring.cloud.gateway.routes[5].id=friendship-service
+spring.cloud.gateway.routes[5].uri=lb://friendship-service
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/friendship/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/auth/realms/spring-social2-realm
 
